--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.19",
+    "@heroui/checkbox": "^2.3.18",
     "@heroui/input": "^2.4.19",
     "@heroui/system": "^2.4.15",
     "@heroui/theme": "^2.4.15",
