--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@heroui/input": "^2.4.19",
     "@heroui/system": "^2.4.15",
     "@heroui/theme": "^2.4.15",
+    "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
